--- a/index.pug
+++ b/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title Hola a todos
-    body
-
+    title Tesla
+  body
+    include pug/header.pug
     include parrafos.pug
