Slider casi terminado, arreglar solo los botones y que se ponga de color al pasar por el boton

--- a/index.pug
+++ b/index.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title Tesla
+    meta(charset="UTF-8")
   body
     include pug/header.pug
+    include pug/slider.pug
     include parrafos.pug
