Slider terminado con botones y eso

--- a/css/slider.css
+++ b/css/slider.css
@@ -30,23 +30,40 @@
 }
 
 .grid-container {
-  margin: 50;
+  position: absolute;
+  left: 15%;
+  top: 50%;
   display: grid;
   grid-template-columns: auto auto;
-  position: relative;
 }
 
-b {
-  position: absolute;
-  background-color: #4CAF50;
-  /* Green */
-  border: none;
+b:hover {
+  color: yellow;
+}
+
+h1 {
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
+}
+
+.botones {
+  position: absolute;
+  left: 15%;
+  top: 62%;
+}
+
+.boton1 {
+  color: white;
+  padding: 2px 20px;
+  border-style: solid;
+  display: inline-grid;
+  margin-bottom: 10px;
+}
+
+.boton2 {
+  background-color: white;
+  color: black;
+  padding: 2px 20px;
+  border-style: solid;
 }
 
 @keyframes cambio {
