--- a/pug/slider.pug
+++ b/pug/slider.pug
@@ -13,8 +13,10 @@ div.grid-container
         h1.title1 Carro 1
     div.grid-item
         h1.title2 Carro 2
-    div.grid-item
-        b.boton1 Ver más
-    div.grid-item
-        b.boton2 Ver más
+   
 
+div.botones
+    div
+        b.boton1 Ver más
+    div
+        b.boton2 Ver más
