Se arreglo el slider,boton extra y eliminacion de margenes y padding del mismo

--- a/pug/slider.pug
+++ b/pug/slider.pug
@@ -1,22 +1,21 @@
 link(rel='stylesheet', href='css/slider.css')
+
 div.slider
     ul
         li
-            img(src="https://icdn6.digitaltrends.com/image/digitaltrends_es/available-on-the-grand-sport-3lt-trim-the-carbon-65-edition-celebrates-65-years-of-corvette-with-a-new-ceramic-matrix-gray-paint-color-and-visible-carbon-fiber-exterior-elements-including-a-carbon-f-1208x800.jpg")
+            img(src="https://cdn.vox-cdn.com/thumbor/E7HsNNmkOHGmEmWbePbrLB_JNG0=/0x0:3840x2160/1200x675/filters:focal(1613x773:2227x1387)/cdn.vox-cdn.com/uploads/chorus_image/image/57642479/Roadster_Hero.0.jpg")
             
         li
             img(src="https://www.diariomotor.com/imagenes/picscache/1920x1600c/tesla-model-s-p100d_1920x1600c.jpg")
         li
-            img(src="https://st1.uvnimg.com/e4/d8/667bc93b41cfb637c3343d9f16e7/roadster-front-34.jpg")
+            img(src="https://www.tesla.com/tesla_theme/assets/img/models/v1.0/section-hero-background.jpg?20180111")
 div.grid-container
     div.grid-item
-        h1.title1 Carro 1
+        h1 Carro 1
     div.grid-item
-        h1.title2 Carro 2
+        h1 Carro 2
    
 
 div.botones
     div
         b.boton1 Ver más
-    div
-        b.boton2 Ver más
