--- a/css/slider.css
+++ b/css/slider.css
@@ -1,90 +1,93 @@
 .slider {
-  width: 95%;
-  margin: auto;
-  overflow: hidden;
-}
+  width: 100%;
+  margin: 0px;
+  overflow: hidden; }
 
 .slider ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 0;
   width: 300%;
-  animation: cambio 10s infinite alternate linear;
-}
+  margin: 0px;
+  padding: 0px;
+  -webkit-animation: cambio 10s infinite alternate linear;
+  animation: cambio 10s infinite alternate linear; }
 
 .slider li {
+  margin: 0px;
+  padding: 0px;
   width: 100%;
-  list-style: none;
-}
+  list-style: none; }
 
 .slider img {
   position: relative;
   /* left: -100%;
-  right: -100%;
-  top: -100%;
-  bottom: -100%; */
+    right: -100%;
+    top: -100%;
+    bottom: -100%; */
   /* margin: auto; */
   /*  min-height: 100%;
-   min-width: 100%; */
+    min-width: 100%; */
   width: 100%;
-  height: 500px;
-}
+  height: 500px; }
 
 .grid-container {
   position: absolute;
   left: 15%;
   top: 50%;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: auto auto;
-}
-
-b:hover {
-  color: yellow;
-}
+  -ms-grid-columns: auto auto;
+  grid-template-columns: auto auto; }
 
 h1 {
   color: white;
-}
+  font-family: sans-serif; }
 
 .botones {
   position: absolute;
   left: 15%;
-  top: 62%;
-}
+  top: 62%; }
 
 .boton1 {
   color: white;
   padding: 2px 20px;
   border-style: solid;
+  display: -ms-inline-grid;
   display: inline-grid;
   margin-bottom: 10px;
-}
+  border-width: thin; }
 
-.boton2 {
-  background-color: white;
+.boton1:hover {
   color: black;
-  padding: 2px 20px;
-  border-style: solid;
-}
+  background-color: white;
+  border-color: white; }
+
+@-webkit-keyframes cambio {
+  16% {
+    margin-left: 0; }
+  32% {
+    margin-left: 0; }
+  48% {
+    margin-left: -100%; }
+  64% {
+    margin-left: -100%; }
+  80% {
+    margin-left: -200%; }
+  100% {
+    margin-left: -200%; } }
 
 @keyframes cambio {
   16% {
-    margin-left: 0;
-  }
+    margin-left: 0; }
   32% {
-    margin-left: 0;
-  }
+    margin-left: 0; }
   48% {
-    margin-left: -100%;
-  }
+    margin-left: -100%; }
   64% {
-    margin-left: -100%;
-  }
+    margin-left: -100%; }
   80% {
-    margin-left: -200%;
-  }
+    margin-left: -200%; }
   100% {
-    margin-left: -200%;
-  }
-}
-
-/*# sourceMappingURL=slider.css.map */
+    margin-left: -200%; } }
