--- a/pug/header.pug
+++ b/pug/header.pug
@@ -6,14 +6,14 @@ head
       img(src="resources/logo.png", alt="", srcset="").logo
       nav
         ul
-          li
+          li.textspace
             a Hola1
-          li |
-          li
+          li.textspace |
+          li.textspace
             a Hola2
-          li |
-          li
+          li.textspace |
+          li.textspace
             a Hola3
-          li |
-          li
+          li.textspace |
+          li.textspace
             a Hola4
