Se agrego el footer de la pagina

--- a/pug/header.pug
+++ b/pug/header.pug
@@ -1,6 +1,6 @@
-
 head
   link(rel='stylesheet', href='css/menu.css')
+  link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.7.2/css/all.css', integrity='sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr', crossorigin='anonymous')
   div.header
     div.content
       img(src="resources/logo.png", alt="", srcset="").logo
